# project_nexus

./: .dockerignore  .gitignore  README.md  docker-compose.yml
aetheros_gateway/: Cargo.toml  Dockerfile  build.rs
aetheros_gateway/src/: main.rs
cognitive_swarm/: Dockerfile  main.py  nexus_pb2_grpc.py  requirements.txt
core_router/: Dockerfile  main.py  nexus_pb2.py  requirements.txt
evaluation_service/: main.py  requirements.txt
k8s/: backend-patch.yaml  dashboard.yaml  gateway.yaml  qdrant.yaml  redis.yaml  router.yaml  swarm.yaml
nexus-dashboard/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
nexus-dashboard/src/app/: page.tsx
proto/: nexus.proto
tests/integration/: test_master.py  test_router.py  test_swarm.py
tests/stress_tests/: test_gateway.py
