[package]
name = "aetheros_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# The fastest web framework in the Rust ecosystem
actix-web = "4.4"

# The asynchronous runtime that allows Rust to handle 100,000+ concurrent requests
tokio = { version = "1.34", features = ["full"] }

# Serialization/Deserialization (Rust's equivalent of Python's json module, but 10x faster)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The Redis driver for our Semantic Cache
redis = { version = "0.23", features = ["tokio-comp"] }
dashmap = "6.2.1"
reqwest = { version = "0.13.4", features = ["json"] }
tonic = "0.14.6"
prost = "0.14.4"

[build-dependencies]
tonic-build = "0.11"
