[package]
name = "aetheros_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# The asynchronous runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Memory & Web Framework
dashmap = "5.5"
axum = "0.7"

# STRICT gRPC Version Lock (Notice the '=' signs!)
tonic = "=0.11.0"
prost = "=0.12.0"
tower-http = { version = "0.6.11", features = ["cors"] }
redis = { version = "1.2.2", features = ["tokio-comp"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }

[build-dependencies]
# This MUST match tonic exactly
tonic-build = "=0.11.0"
